Remove pessimistic portfolios (UTX pool)
Remove considerUnspent arg from /debug/portfolios (REST API)
